--- a/用户管理.md
+++ b/用户管理.md
@@ -13,11 +13,12 @@ sync:x:4:65534:sync:/bin:/bin/sync
 ...
 ```
 每一行代表一个用户。
-按个`:`分割，上述七个每个字段的含义是：
+按个`:`分割，前四个字段的含义是：
 - 用户名
--
--
--
+- 密码。可以看大上线用`x`代替了真实的密码
+- 用户所在的组的id
+- 用户所在组的用户列表
+后面三个字段的含义：
 - 用户的备注信息
 - 登录后所在的目录
 - 登陆后所用的shell
@@ -35,3 +36,19 @@ user1:x:1000:1000:a test user:/home/user1:/sbin/nologin
 - `-c`: 给这个用户一个备注，便于管理
 - `-d`: 登陆后所在的目录
 - `-s`: 登陆后的shell
+
+#### 如何删除一个用户？
+``` bash
+$ userdel user1
+```
+
+#### 如何查看本机的用户组列表
+已经被包含着上面的用户列表里面了，还可以：
+``` bash
+$ cat /etc/group
+root:x:0:
+daemon:x:1:
+bin:x:2:
+sys:x:3:
+...
+```
