--- a/用户管理.md
+++ b/用户管理.md
@@ -25,7 +25,7 @@ sync:x:4:65534:sync:/bin:/bin/sync
 
 #### 如何创建一个用户？
 ``` bash
-$ useradd -c 'a test user' -d /home/user1 -s /sbin/nologin user1
+$ useradd -c 'a test user' -d /home/user1 -s /usr/sbin/nologin user1
 
 $ cat /etc/passwd
 
@@ -37,12 +37,37 @@ user1:x:1000:1000:a test user:/home/user1:/sbin/nologin
 - `-d`: 登陆后所在的目录
 - `-s`: 登陆后的shell
 
+#### 如何设置用户的密码？
+
+```bash
+# 修改当前用户的密码
+$ passwd
+# then it will ask you to enter password.
+
+# 超级管理员可以修改其他用户的密码
+$ passwd user1
+```
+
+
+
+#### 如何修改一个用户的信息？
+
+```bash
+$ useradd -c 'a test user' -d /home/user1 -s /usr/sbin/nologin user1
+
+$ cat /etc/passwd
+```
+
+参数和选项和`useradd`一样，就是用新的option覆盖之前的
+
 #### 如何删除一个用户？
+
 ``` bash
-$ userdel user1
+$ usermod -c 'change by usermod' user1
 ```
 
 #### 如何查看本机的用户组列表
+
 已经被包含着上面的用户列表里面了，还可以：
 ``` bash
 $ cat /etc/group
